workspace/second/src/objects/Bnefit__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Element_Jucntion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Element</label>
        <referenceTo>Bnefit__c</referenceTo>
        <relationshipLabel>RT_Benefit_Element</relationshipLabel>
        <relationshipName>RT_Benefit_Element</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Plan__c</fullName>
        <label>Benefit Plan</label>
        <referenceTo>Benefit_Plan__c</referenceTo>
        <relationshipLabel>RT_Benefit_Element</relationshipLabel>
        <relationshipName>RT_Benefit_Element</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>COBRA_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>COBRA Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependent_Plans__c</fullName>
        <label>Dependent Plans</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan1</fullName>
                </value>
                <value>
                    <fullName>Plan2</fullName>
                </value>
                <value>
                    <fullName>Plan3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Element__c</fullName>
        <label>Parent Element</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Benefit Element</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bnefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RT_Benefit_Element</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>